--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,4 +2,14 @@
 	min-height: 100vh;
 	border: solid 1px #333;
 	flex: 0.2;
+	min-width: 230px;
+	background-color: #040404;
+	padding: 0 1em;
+}
+
+.logo {
+	object-fit: contain;
+	height: 70px;
+	width: 100%;
+	text-align: center;
 }
