--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,8 +1,49 @@
 .player-container {
-	width: 100%;
-	height: 65px;
+	width: 97%;
+	height: 100px;
 	position: fixed;
 	bottom: 0;
 	background-color: #282828;
 	padding: 1em;
+	justify-content: space-between;
+}
+
+.player-album {
+	flex: 0.4;
+	display: flex;
+}
+
+.player-album > img {
+	width: 80px;
+	object-fit: contain;
+	margin-right: 1em;
+}
+
+.player-album p {
+	margin-top: 0.5em;
+}
+
+.player-controls {
+	flex: 0.3;
+	max-width: 200px;
+	justify-content: space-around;
+	padding: 2em;
+}
+
+.player-controls > svg {
+	font-size: 24px;
+}
+
+#play-icon {
+	font-size: 40px;
+}
+
+.player-volume {
+	flex: 0.4;
+	padding: 2em;
+	max-width: 160px;
+}
+
+.player-volume svg {
+	font-size: 16px;
 }
