--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,19 @@ body {
 body::-webkit-scrollbar {
 	display: none;
 }
+
+.flex {
+	display: flex;
+}
+
+.align-center {
+	align-items: center;
+}
+
+.justify-center {
+	justify-content: center;
+}
+
+.flex-column {
+	flex-direction: column;
+}
