--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+* {
+	margin: 0;
+}
+
 body {
 	width: 100%;
 	min-height: 100vh;
-	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
 		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
