--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,11 +1,11 @@
 .login-container {
 	display: grid;
 	place-items: center;
-	height: 100%;
+	min-height: 100vh;
 }
 
 .login-container > img {
-	width: 100%;
+	width: 68%;
 }
 
 .login-container > a {
@@ -15,4 +15,10 @@
 	font-weight: 800;
 	color: white;
 	text-decoration: none;
+}
+
+@media only screen and (min-width: 992px) {
+	.login-container > img {
+		max-width: 40%;
+	}
 }
